load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "timer",
    visibility = ["//visibility:public"],
    includes = ["include"],
    defines = ["BOOST_ALL_NO_LIB"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    srcs = glob(["src/**/*.cpp"]),
    deps = [
        "@boost//libs/config",
        "@boost//libs/system",
        "@boost//libs/chrono",
    ],
)
